# hackathon_guide

./: .gitattributes  .gitignore  README.md  app.py  client.py  jupyter_file.ipynb  pyproject.toml  server.py
.github/workflows/: ci.yaml
config/: .gitconfig  recommended_software.md
config/postman/: FastAPI.postman_collection.json  Flask.postman_collection.json
presentation/: סשן מיוחד - לנצח את האקתון.pptx
src/app/templates/: index.html
src/client/static/css/: style.css
src/client/static/js/: script.js
src/client/templates/: add_user.html  base.html  hello.html  index.html  upload.html  users.html
tests/: test_dummy.py
